--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -12,6 +12,8 @@
     <%= favicon_tag 'images/favicon.png' %>
   </head>
   <body>
-    <%= yield %>
+    <%= partial "layouts/navbar" %>   <!-- inject layouts/_navbar.html.erb -->
+    <%= yield %> <!-- Inject page content -->
+    <%= partial "layouts/footer" %>   <!-- inject layouts/_footer.html.erb -->
   </body>
 </html>
