Add LeWagon cards

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,5 +5,7 @@ title: Le Wagon - Middleman
 <div id="my-home">
   <div class="home-content">
     <%=  partial "layouts/banner"  %>
+    <h2 class="text-center">Other cities</h2>
+    <%=  partial "layouts/cards"  %>
   </div>
 </div>
