--- a/source/layouts/_cards.html.erb
+++ b/source/layouts/_cards.html.erb
@@ -1,9 +1,20 @@
-<div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/shanghai');">
-  <div class="card-category">Popular</div>
-  <div class="card-description">
-    <h2>Le Wagon Shanghai</h2>
-    <p>Very cool city, the best</p>
+<div class="container">
+
+  <div class="row">
+    <% %w[shangai lisbon tokyo].each do |city| %>
+    <div class="col-xs-12 col-sm-6 col-md-4">
+      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/<%=city%>');">
+        <div class="card-category">Popular</div>
+        <div class="card-description">
+          <h2>Le Wagon <%=  city.capitalize  %></h2>
+          <p>Very cool city, the best</p>
+        </div>
+        <img src='https://kitt.lewagon.com/placeholder/users/paulgaumer' class="card-user"/>
+        <a class="card-link" href="#" ></a>
+      </div>
+    </div>
+    <% end  %>
   </div>
-  <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
-  <a class="card-link" href="#" ></a>
+
+</div>
 </div>
